--- a/bai2/index.html
+++ b/bai2/index.html
@@ -6,6 +6,7 @@
         <title>Bài 2</title>
     </head>
     <body>
+        <div class="in"></div>
         <script src="./index.js"></script>
     </body>
 </html>
